# ticos-sdk-for-c

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_ZH.md  library.properties
.github/workflows/: on_publish.yml  on_release.yml
.sls.tencent/: get_product.py  index.py  serverless.yml
examples/Ticos_Hub_ESP32/: Ticos_Hub_ESP32.ino  readme.md  ticos_thingmodel.h  user_app.c
examples/Ticos_IoT_Hub_ESP32/: Ticos_IoT_Hub_ESP32.ino  iot_configs.h  my_mqtt.c  my_mqtt.h  readme.md  ti_iot_hal.c  ti_iot_hal.cpp  ti_thingmodel.c  ti_thingmodel.h  ti_thingmodel.json  ti_thingmodel_internal.h  ti_user_property.c  ticos_hal.c  ticos_mqtt_wrapper.c  ticos_thingmodel.c  user_app.c  user_app.h
examples/t3/: thing_model.json  ticos_thingmodel.c  (+3 more)
src/: _ti_cfg.h  _ti_cfg_prefix.h  _ti_cfg_suffix.h  ti_base64.c  ti_base64.h  ti_config.h  ti_config_internal.h  ti_context.c  ti_context.h  ti_core.h  ti_credentials.h  ti_credentials_internal.h  ti_hex_private.h  ti_http.h  ti_http_header_validation_private.h  ti_http_internal.h  ti_http_pipeline.c  ti_http_policy.c  ti_http_policy_logging.c  ti_http_policy_logging_private.h  ti_http_policy_retry.c  ti_http_private.h  ti_http_request.c  ti_http_response.c  ti_http_transport.h  ti_iot.h  ti_iot_api.c  ti_iot_api.h  ti_iot_common.c  ti_iot_common.h  ti_iot_common_internal.h  ti_iot_hal.h  ti_iot_hub_client.c  ti_iot_hub_client.h  ti_iot_hub_client_c2d.c  ti_iot_hub_client_commands.c  ti_iot_hub_client_methods.c  ti_iot_hub_client_properties.c  ti_iot_hub_client_properties.h  ti_iot_hub_client_sas.c  (+31 more)
tools/: updateLibrary.mjs
(+702 files in other folders)
